--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
         <div class="final-message" id="finalMessage">
             <p>Thank you for answering, Bacchu! ❤️</p>
+            <p>So Sorry terko itna parashan kara Billu 🥺</p>
             <p>I love you soooo much! 😘</p>
             <p>Will you be with me forever? 💍</p>
             <div class="options">
